[gd_scene load_steps=3 format=3 uid="uid://b0bj06hlw77p2"]

[ext_resource type="Script" path="res://scripts/score.gd" id="1_lkh8q"]
[ext_resource type="Theme" uid="uid://ddwyadkcpe0pc" path="res://theme/button_theme.tres" id="2_18n4l"]

[node name="score" type="CanvasLayer"]
process_mode = 3

[node name="control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lkh8q")

[node name="bg_overlay" type="ColorRect" parent="control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="container" type="MarginContainer" parent="control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 400
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 250

[node name="coins_container" type="HBoxContainer" parent="control/container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="coins_counter" type="Label" parent="control/container/coins_container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "Coins: 0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score_container" type="HBoxContainer" parent="control/container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="score_counter" type="Label" parent="control/container/score_container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "Score: 000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu_holder" type="VBoxContainer" parent="control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -47.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2

[node name="retry_btn" type="Button" parent="control/menu_holder"]
layout_mode = 2
theme = ExtResource("2_18n4l")
text = "RETRY
"

[node name="quit_btn" type="Button" parent="control/menu_holder"]
layout_mode = 2
theme = ExtResource("2_18n4l")
text = "QUIT
"

[connection signal="pressed" from="control/menu_holder/retry_btn" to="control" method="_on_retry_btn_pressed"]
[connection signal="pressed" from="control/menu_holder/quit_btn" to="control" method="_on_quit_btn_pressed"]
